axum-macros/tests/debug_handler/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequest<(), Body>` is not satisfied
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:23
  |
4 | async fn handler(foo: bool) {}
  |                       ^^^^ the trait `FromRequest<(), Body>` is not implemented for `bool`
  |
  = help: the following other types implement trait `FromRequest<S, B>`:
            <() as FromRequest<S, B>>
            <(T1, T2) as FromRequest<S, B>>
            <(T1, T2, T3) as FromRequest<S, B>>
            <(T1, T2, T3, T4) as FromRequest<S, B>>
            <(T1, T2, T3, T4, T5) as FromRequest<S, B>>
            <(T1, T2, T3, T4, T5, T6) as FromRequest<S, B>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequest<S, B>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequest<S, B>>
          and 34 others
  = help: see issue #48214
